DuplicateMerger: select none by default.

Don't select any entry in the duplicate merger to avoid accidental
deletion of images.

BUG: 320471